# pycallgraph2

./: .gitignore  pyproject.toml
pycallgraph2/output/: graphviz.py
